--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta http-equiv="pragma" content="no-cache"/>
 
         <!-- Set the title bar of the page -->
-        <title>Created with GameMaker</title>
+        <title>Jumper Test</title>
 
         <!-- Custom PreStyle code is injected here -->
         
@@ -102,7 +102,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/MSGv01.js?cachebust=785902797"></script>
+        <script type="text/javascript" src="html5game/MSGv01.js?cachebust=263844104"></script>
 
         <!-- Builtin injector for injecting runner path -->
         
