--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/MSGv01.js?cachebust=263844104"></script>
+        <script type="text/javascript" src="html5game/MSGV05.js?cachebust=1601100654"></script>
 
         <!-- Builtin injector for injecting runner path -->
         
